--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:layout_height="match_parent"
-    tools:context=".Screen.HomeActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/ddd"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/lnContainer"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Current Location"
-         />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".Screen.HomeActivity">
 
-    <TextView
-        android:id="@+id/ddd1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Direction"
-        />
+        <TextView
+            android:id="@+id/ddd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Direction Activity" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/ddd1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="GoogleMap Activity" />
+
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
