--- a/app/src/main/res/layout/google_map_activity.xml
+++ b/app/src/main/res/layout/google_map_activity.xml
@@ -3,11 +3,21 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragmentGoogleMapSupport"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+        <LinearLayout
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+                <fragment
+                    android:id="@+id/fragmentGoogleMapSupport"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"/>
+        </LinearLayout>
+
+        <com.hoanpham.uit.cheapgasstation.Base.IndicartorSeekbar
+            android:id="@+id/sss"
+            android:layout_marginTop="500dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"/>
 
 </LinearLayout>
