--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="primaryColor">#4CAF50</color>
+    <color name="secondDary">#78DD54</color>
 </resources>
